--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
   --yellow-green: hsl(89, 72%, 45%);
   --orange-soda: hsl(9, 100%, 62%);
   --cultured-1: hsl(0, 0%, 93%);
-  --cultured-2: hsl(192, 24%, 96%);
+  --cultured-2: rgb(242, 246, 247);
   --misty-rose: hsl(7, 56%, 91%);
   --alice-blue: hsl(210, 100%, 97%);
   --seashell: hsl(8, 100%, 97%);
@@ -600,6 +600,11 @@ button, a { transition: var(--transition); }
   width: max-content;
   margin-inline: auto;
   margin-bottom: 20px;
+}
+
+.service-card .card-icon ion-icon {
+  color: var(--orange-soda);
+  font-size: 50px;
 }
 
 .service-card .card-title { margin-bottom: 15px; }
